security/network-policies/allow-inbound-to-istio-sidecar-from-prometheus-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: # kpt-merge: /allow-inbound-to-istio-sidecar-from-prometheus
  name: allow-inbound-to-istio-sidecar-from-prometheus
  annotations:
    internal.kpt.dev/upstream-identifier: 'networking.k8s.io|NetworkPolicy|default|allow-inbound-to-istio-sidecar-from-prometheus'
spec:
  podSelector:
    matchLabels:
      security.istio.io/tlsMode: 'istio'
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              namespace: helix-monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - port: 15090
